# instagram-mcp

./: .gitignore  LICENSE  MANIFEST.in  README.md  live_test.py  mcp_server.py  pyproject.toml  requirements.txt  test_mcp.py
instagram_mcp_server/: __init__.py  __main__.py  instagram_client.py  mcp_server.py
